# airflow_analytics

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 27c377442093_exchange_rate_rub.py  e3412ad437e1_created_cat_facts.py
app/: main.py  models.py
app/models/: exchange_rates_rub.py
config/: airflow.cfg
dags/: apply_migrations.py  get_cat_facts.py  get_exchange_rates.py
scripts/: analytics  entry
