[tool.poetry]
name = "airflow-analytics"
version = "0.1.0"
description = ""
authors = ["El'dar <evershinin@webiomed.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
